[update]: *绑定手机修改
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15844 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -3809,7 +3809,7 @@ position: absolute;
     text-align: center;
 }
 .xui-userCenter-header .xui-inner-levelBox {
-    display: block;
+    display: inline-block;
     margin-top: 9px;
     color: #fff;
     height: 18px;
