--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -21,13 +21,21 @@
                     </div>
                     <div class="xui-userCenterInfo pl5">
                         <h2 class="em8">{% if member.username %}{{ member.username }}{% else %}我{% endif %}</h2>
-                        <a href="./?module=user_center&model=binding_page&action=get&workspace_id=user_center&webapp_owner_id={{request.webapp_owner_id}}&project_id=0" class="xui-bindphone">绑定手机</a>
-                        <span class="xui-inner-levelBox em85">
-                            <i></i>
-                            <span class="xui-btn-guide em7">
-                            {{ member.grade.name }}
+                        <a href="./?module=user_center&model=binding_page&action=get&workspace_id=user_center&webapp_owner_id={{request.webapp_owner_id}}&project_id=0" class="xui-bindphone">
+                            {% if member_info.is_binded %}
+                            	{{ member_info.phone }}
+                            {% else %}
+                            	绑定手机
+                            {% endif %}
+                        </a>
+                        <div>
+                            <span class="xui-inner-levelBox em85">
+                                <i></i>
+                                <span class="xui-btn-guide em7 vm">
+                                {{ member.grade.name }}
+                                </span>
                             </span>
-                        </span>
+                        </div>
                     </div>
                 </div>
             </div>
