[update]: *绑定手机修改
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15850 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -5031,6 +5031,10 @@ a.xui-pointCardLink:link,a.xui-pointCardLink:visited{color:#fff;}
     font-size: 0.95rem;
     
 }
+.xui-wapBinding-page input::-webkit-inner-spin-button,
+.xui-wapBinding-page input::-webkit-outer-spin-button{
+    -webkit-appearance: none;
+}
 .xui-wapBinding-page ::-webkit-input-placeholder{
     font-size: 0.95rem;
     color:#bebdbd;
