[update]: *修改绑定提示
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15857 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/binding_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/binding_page.html
@@ -143,7 +143,7 @@ $(document).ready(function() {
 			         	isSlide: true,
 			         	speed: 3000
 			        })
-		        	window.location.href = "./?webapp_owner_id={{request.webapp_owner_id}}&module=user_center&model=binded_user_info&action=get&workspace_id=user_center";
+		        	window.location.href = "./?webapp_owner_id={{request.webapp_owner_id}}&module=user_center&model=user_info&action=get&workspace_id=user_center";
 		        },
 		        error: function(data){
 		        	$('.xui-page').alert({
