[update]: *修改绑定提示 *Update bug http://weappop.weizoom.com/watchdog/show/4674233/
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15861 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/binding_info.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/binding_info.html
@@ -8,7 +8,7 @@
 		<label for="">
 			绑定手机
 		</label>
-		{{member_info.phone_number}}
+		{{member_info.phone}}
 		<!-- <a href="javascript:void(0);" style="color:#dd2727;">立即绑定</a> -->
 	</div>
 	<p class="ml10 mr10">注：手机号绑定后不能更改，若原手机号已丢失或停用请通过公众号联系客服。</p>
