[update] *修改bud *修改绑定逻辑
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15885 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/binding_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/binding_page.html
@@ -87,6 +87,7 @@ $(document).ready(function() {
 	});
 
 	$(".xa-getCode").click(function(event){
+		$('.xa-getCode').attr('disabled', 'true').css('background-color', '#63b7ff');
 		var phone_number = $('.xa-phoneNum').val();
 		if (validate_phone(phone_number)){
 			W.getApi().call({
@@ -113,9 +114,11 @@ $(document).ready(function() {
 			         	speed: 2000
 			     	});
 		        	}
-
+		        	$('.xa-getCode').removeAttr('disabled').css('background-color', '#067de2');
 		        }
 		    });
+		} else {
+			$('.xa-getCode').removeAttr('disabled').css('background-color', '#067de2');
 		}
 	});
 
