--- a/weapp/market_tools/tools/complain/templates/complain/editor/member_complain_list.html
+++ b/weapp/market_tools/tools/complain/templates/complain/editor/member_complain_list.html
@@ -36,7 +36,7 @@
 				<td>
 					<div>
 						{% if complain.member_id %}
-						<a href="/member/member_detail/edit/?{{ complain.member_id }}">
+						<a href="/member/member_detail/edit/?id={{ complain.member_id }}">
 							{{ complain.member_username|safe }} 
 						</a>
 						{% else%}
