[update]: *Update bug qa
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15906 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages_detail.html
@@ -212,7 +212,7 @@ function updateUserInfo(options) {
 $(document).ready(function() {
 	//start: 判断是否需要回复
 	var replied = '{{could_replied}}';
-	var openid = "{{session.weixin_user}}";
+	var openid = "{{session.weixin_user.username}}";
 	if (replied === '1') {
 		var editor = new W.view.weixin.MessageEditor({
 	        el: '#edit-message-panel',
