解决http://weappop.weizoom.com/watchdog/show/4685076/
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@15908 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/mall/templates/mall/editor/recycled_products.html
+++ b/weapp/mall/templates/mall/editor/recycled_products.html
@@ -77,7 +77,7 @@
 				<th width="100">分组</th>
 				<th width="105">商品价格（元）</th>
 				<th width="50">库存</th>
-				<th class="tx_sortable" data-sort-attr='sales' width="50">总销量</th>
+				<th width="50">总销量</th>
 				<th width="120">创建时间</th>
 				<th width="110">操作</th>
 			</tr>
