--- a/weapp/mall/templates/mall/editor/promotion/promotions.html
+++ b/weapp/mall/templates/mall/editor/promotion/promotions.html
@@ -56,7 +56,7 @@
 				<th width="100">促销类型</th>
 				<th  width="120">商品价格（元）</th>
 				<th width="80">状态</th>
-				<th class="tx_sortable" data-sort-attr='sales' width="60">总销量</th>
+				<th width="60">总销量</th>
 				<th width="210">起止时间</th>
 				<th width="120">操作</th>
 			</tr>
