--- a/weapp/templates/base_v2.html
+++ b/weapp/templates/base_v2.html
@@ -111,6 +111,9 @@
 			<a title="粉丝沟通" href="http://weibo.weizoom.com/?token={{token}}"></a>
 			<a title="微信沟通" href="/new_weixin/outline/"></a>
 			<a title="微商城" href="/mall/outline/get/"></a>
+			<a title="实时消息" href="/new_weixin/realtime_messages/">
+				<span class="xa-num-unread-message-count xui-noticyNum"></span>
+			</a>
 		</div>
 	</body>
 </html>
