--- a/weapp/templates/content_base.html
+++ b/weapp/templates/content_base.html
@@ -348,10 +348,10 @@
           //message notify interval
 
          // {% if not under_develop %}
-         alert(1)
-          unReadCountCheck();
-          var unread_message_notify_interval = setInterval(
-            unReadCountCheck, 5000); //5s进行一次未读消息数的检查
+        // alert(1)
+        //  unReadCountCheck();
+        //  var unread_message_notify_interval = setInterval(
+        //    unReadCountCheck, 5000); //5s进行一次未读消息数的检查
           //{% endif %}
 
 
