--- a/weapp/templates/new_jqm_content_base.html
+++ b/weapp/templates/new_jqm_content_base.html
@@ -220,7 +220,7 @@
                     },
                     // 分享成功
                     success : function(res) {
-                       alert('success1')
+                       //alert('success1')
                        W.getApi().call({
                             app: 'webapp',
                             api: 'project_api/call',
@@ -234,13 +234,13 @@
                                 title:W.sharePageTitle
                             }),
                             success: function(data) {
-                                alert("创建分享链接成功")
+                                alert("分享链接成功")
                             },
                             error: function(data){
-                                alert("创建分享链接失败")
+                                alert("分享链接失败")
                             }
                         });
-                       alert('success2')
+                       //alert('success2')
                     }
                 };
                 wx.ready(function () {
