[update] * 修改 样式
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16094 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/css/termite.css
+++ b/weapp/static_v2/css/termite.css
@@ -313,7 +313,7 @@
 .xui-pagesPage-activePage .xui-i-head {
 	font-size: 14px;
 	padding: 8px 0px;
-	border-bottom: solid 1px #F0F0F0;
+	border-bottom: solid 1px #CBCBCB;
 }
 .xui-pagesPage-activePage .xui-i-content {
 	padding: 8px;
