[update]: *Update bug content_base.html
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16095 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/templates/content_base.html
+++ b/weapp/templates/content_base.html
@@ -51,7 +51,7 @@
             <li>
                 <a {% ifequal first_nav_name 'template' %}class="active"{% endifequal %} href="/termite2/pages/" title='店铺装修'>店铺装修</a>
             </li>
-            {% else %}
+            {% endif %}
             {% if not request.user_profile.is_use_wepage %}
             <li>
                 <a {% ifequal first_nav_name 'template' %}class="active"{% endifequal %} href="/webapp/template/" title='模板'>模板</a>
