--- a/weapp/static_v2/js/view/termite_embeded_phone/template.html
+++ b/weapp/static_v2/js/view/termite_embeded_phone/template.html
@@ -1,7 +1,7 @@
  <script id="termite-edit-simulator-tmpl-src" type="text/x-jquery-tmpl">
 	<div class="xui-simulator xa-simulator">
 		<div class="xui-simulator-back-btn xa-simulator-back-btn"></div>
-		<div class="xui-title-zone">${title}</div>
+		<div class="xui-title-zone xa-simulatorTitle">${title}</div>
         <div class="xui-simulator-screen xa-simulator-screen">
 	        <div class="xui-modelBox" style="height:50px;">点击这里添加新模块	
 	        </div>
