--- a/weapp/static_v2/js/view/weixin_embeded_phone/template.html
+++ b/weapp/static_v2/js/view/weixin_embeded_phone/template.html
@@ -1,7 +1,7 @@
  <script id="weixin-edit-simulator-tmpl-src" type="text/x-jquery-tmpl">
 	<div class="xui-simulator xa-simulator">
 		<div class="xui-simulator-back-btn xa-simulator-back-btn"></div>
-		<div class="xui-title-zone">${title}</div>
+		<div class="xui-title-zone xa-simulatorTitle">${title}</div>
         <div class="xui-simulator-screen xa-simulator-screen">
         	<div class="xui-simulator-screen-right {{if enableAction}}xui-hide{{/if}}"></div>
         	<div class="xui-simulator-screen-bottom {{if enableAction}}xui-hide{{/if}}"></div>
