--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/binding_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/binding_page.html
@@ -35,7 +35,7 @@ $(document).ready(function() {
 	var wait=60;
 	function validate_phone(phone_number){
 		var reg = /^1[3|4|5|8][0-9]\d{4,8}$/;
-		if(!reg.test(phone_number || phone_number.length != 11 )){
+		if(!reg.test(phone_number) || phone_number.length != 11){
 			$('.xui-page').alert({
 		         	isShow: true,
 		         	info: "请填写有效的手机号",
