--- a/weapp/termite2/templates/termite2/wepage_design_page.html
+++ b/weapp/termite2/templates/termite2/wepage_design_page.html
@@ -100,6 +100,11 @@
 			};
 			$(document).ready(function() {
 				detectParentTask();
+
+			});
+			$(document).click(function() {
+				// 点击空白处，触发事件
+				parent.W.Broadcaster.trigger('component:cancel_linkMenu');
 			});
 		</script>
 	</body>
